--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,130 +7,89 @@
   text-decoration: none;
 }
 
+:root {
+  --color_rosita: #f195b2;
+}
+
 .header_main--container {
+  min-width: 320px;
+  width: 100%;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  background-color: var(--color_rosita);
+  height: 120px;
+}
+.header_main--container .phone_mail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+.header_main--container .phone_mail a {
+  color: white;
+  margin: 5px auto;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.header_main--container .phone_mail a i {
+  margin-right: 20px;
+}
+.header_main--container .social-media--header {
+  grid-row: 2;
+}
+.header_main--container .social-media--header ul {
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
-  background-color: #f195b2;
-  width: 100%;
-  min-height: 50px;
-  justify-content: space-between;
-}
-
-.phone_mail {
-  float: left;
-  display: block;
-}
-.phone_mail a {
-  margin-left: 20px;
-  color: white;
-}
-.phone_mail a i {
-  padding-right: 10px;
-  margin-top: 15px;
-}
-
-.social-media--header {
-  width: 150px;
-  height: 100%;
-}
-.social-media--header ul {
-  display: flex;
+  margin: 10px 10px;
+  justify-content: center;
   list-style: none;
-  flex-direction: row;
 }
-.social-media--header ul li a {
-  margin-top: 15px;
-  padding-right: 30px;
+.header_main--container .social-media--header ul li {
+  margin: 10px;
+}
+.header_main--container .social-media--header ul li a {
   color: white;
-}
-
-.header_menu--principal {
-  width: 100%;
-  border: 1px solid black;
+  font-weight: 200;
+  font-size: 20px;
 }
 
 .main_menu--container {
-  margin-left: 15px;
-  margin-right: 15px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
+  height: 100px;
+  min-width: 320px;
+  border: 1px solid black;
 }
-
-.img__logo {
-  height: 100%;
-  width: 150px;
-}
-.img__logo a {
-  width: 10px;
-  margin-left: 45px;
+.main_menu--container .img__logo {
+  width: 280px;
+  display: flex;
   align-items: center;
+  justify-content: center;
 }
-.img__logo a img {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 100px;
+.main_menu--container .img__logo a img {
+  width: 90px;
+}
+.main_menu--container .main__menu {
+  width: 40px;
+}
+.main_menu--container .main__menu div .menu_relative {
+  position: absolute;
+  top: 219px;
+  left: 1px;
+  right: 1px;
+  border: 1px solid black;
   height: auto;
 }
-
-.main__menu {
-  width: auto;
-  height: auto;
-}
-.main__menu ul {
-  display: flex;
-  flex-wrap: wrap;
-}
-.main__menu ul li {
-  text-decoration: none;
+.main_menu--container .main__menu div .menu_relative ul {
+  text-align: center;
   list-style: none;
-  padding: 10px;
 }
-.main__menu ul li a {
-  font-size: 26px;
-  font-weight: 600;
-  color: black;
-}
-
-.cosito {
-  position: absolute;
-  width: 100%;
-  height: 20px;
-}
-
-/* slaider Pincipal */
-.slider_img {
-  width: 100%;
-  height: 700px;
-}
-
-.tilte_slider--card {
-  position: absolute;
-  color: #fff;
-  letter-spacing: 2px;
-  line-height: 35px;
-  top: 50%;
-  left: 3%;
-  margin-left: 90px;
-  margin-right: 90px;
-}
-.tilte_slider--card h2 {
-  margin-bottom: 50px;
-  font-size: 95px;
-}
-.tilte_slider--card p {
-  font-size: 30px;
-}
-.tilte_slider--card .button-slider {
-  top: 210px;
-  position: absolute;
-  height: 50px;
-  width: 160px;
-  border-radius: 30%;
-  color: black;
-  font-weight: bold;
-  font-size: 20px;
+.main_menu--container .main__menu div .menu_relative ul li {
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
