--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url(./cards.css);
 @import url(./footer.css);
+@import url(./menu.css);
 :root{    
     --blue: #007bff;
     --indigo: #6610f2;
