--- a/assets/css/csspages/footer.css
+++ b/assets/css/csspages/footer.css
@@ -25,7 +25,7 @@
     height: 60px;
 }
 .footer__tittle h2{
-    color: white;
+    color: var(--white);
     font-size: 1.6rem;
     margin-bottom: 10px;
     
@@ -42,7 +42,7 @@
     display: flex;
 }
 .footer__socialmedia a{
-    color: white;
+    color: var(--white);
     font-size: 20px;
     margin-right: 10px;
 }
@@ -55,7 +55,7 @@
     
 }
 .footer__tittles{
-    color: white;
+    color: var(--white);
     font-size: 1.8rem;
     margin-bottom: 25px;
 }
@@ -69,7 +69,7 @@
 }
 .footer__menu ul li a{
     text-decoration: none;
-    color: #a8a8a8;
+    color: var(--gray);
     font-size: 1.2rem;
 }
 .footer__copy--container{
@@ -78,6 +78,6 @@
     
 }
 .footer__copy{
-    color: white;
+    color: var(--white);
     font-size: 1.3rem;
 }
