--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,30 +2,19 @@
 
 
 
+
 @import url(./csspages/cards.css);
 @import url(./csspages/footer.css);
 @import url(./csspages/menu.css);
 @import url('./csspages/serviesCards.css');
+@import url('./csspages/navbar.css');
 :root{    
+    --azulito: #94c9d9;
     --blue: #007bff;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
     --pink: #f195b2;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
-    --teal: #20c997;
-    --cyan: #17a2b8;
     --white: #fff;
     --gray: #a8a8a8;
-    --gray-dark: #343a40;
-    --primary: #007bff;
-    --secondary: #6c757d;
-    --success: #28a745;
-    --info: #17a2b8;
-    --warning: #ffc107;
-    --danger: #dc3545;
+    
     --light: #f8f9fa;
     --dark: #343a40;
 }
