plantilla casi terminada 80%

--- a/assets/css/csspages/navbar.css
+++ b/assets/css/csspages/navbar.css
@@ -48,16 +48,93 @@
     color: var(--white);
     
 }
+
+
+
+
+/* barra de menu */
+
+.navbar__navegationContainer{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    
+    align-items: center;
+}
+
+.navabr__menu{
+    width: 100%;
+    
+    
+}
+
+
+
+/* contenedor de logo */
+.navbar__logo{
+    width: 60%;
+    height: auto;
+}
+.navbar__logo img{
+width: 100px;
+height: 100px;
+object-fit: cover;
+margin-left: 32px;
+}
+
+
+
+
+
+
+/*       menu */
+
+.navbr__menu--grid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+    justify-items: center;
+    gap: 12px;
+
+
+
+    height: 30px;
+    width: auto;
+    list-style: none
+
+   
+}
+.navbr__menu--grid li a{
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: var(--base_black);
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+.navbr__menu--grid li a:hover{
+    
+    color: var(--pink);
+    transition: all;
+    cursor: pointer;
+    transition: all 6ms;
+}
+
+
+
+
+
+
 @media (max-width: 623px)  {
     .socialMeadia--mail{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
         
     }
     .socialMeadia--mail p{
         margin-top: 12px;
         margin-bottom: 12px;
+        
     }
     
     .navba__socialmedia{
@@ -73,5 +150,8 @@
     }
     .navba__socialmedia ul{
         margin-bottom: 12px;
+    }
+    .navabr__menu{
+        display: none;
     }
 }
