--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+
 
 
 
@@ -6,15 +8,18 @@
 @import url(./csspages/cards.css);
 @import url(./csspages/footer.css);
 @import url(./csspages/menu.css);
-@import url('./csspages/serviesCards.css');
-@import url('./csspages/navbar.css');
+@import url(./csspages/serviesCards.css);
+@import url(./csspages/navbar.css);
+@import url(./csspages/menuMobile.css);
+@import url(./csspages/slider.css);
+
 :root{    
     --azulito: #94c9d9;
     --blue: #007bff;
     --pink: #f195b2;
     --white: #fff;
     --gray: #a8a8a8;
-    
+    --base_black: #666;
     --light: #f8f9fa;
     --dark: #343a40;
 }
@@ -25,4 +30,7 @@ html{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body{
+    font-family: 'Poppins', sans-serif;
 }
