--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,8 @@
 @import url(./csspages/menuMobile.css);
 @import url(./csspages/slider.css);
 @import url(./csspages/banner.css);
+@import url(./csspages/cardblog.css);
+@import url(./csspages/blogContainer.css);
 
 :root{    
     --azulito: #94c9d9;
