ya se complico todo aun faltan puntos para la plantilla

--- a/src/styles/csspages/footer.css
+++ b/src/styles/csspages/footer.css
@@ -1,5 +1,6 @@
 .footer{
-    width: 100%;    
+    width: 100%;
+    height: 100%;    
      background: #303339; 
      padding-top: 54px;
      padding-left: 54px;
