--- a/src/styles/csspages/banner.css
+++ b/src/styles/csspages/banner.css
@@ -1,5 +1,5 @@
 .banner__area{
-    /* background: url(./assets/img/banner-bg.jpg) no-repeat scroll center center ; */
+    background: url(../../assets/img/banner-bg.jpg) no-repeat scroll center center ; 
     
     width: 100%;
     height:300px ;
