--- a/src/styles/csspages/cards.css
+++ b/src/styles/csspages/cards.css
@@ -3,11 +3,13 @@
     height: auto;
     display: grid;
     grid-template-columns: 100px 1fr 100px;
+    margin-bottom: 26px;
     
 }
 .card__imgl img{
-    width: 100px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .container__cards{
@@ -56,6 +58,8 @@
     width: 100%;
     height: 100%;
     position: relative;
+    transition: all 0.4s;
+   
 }
 .card__img img:hover{
     transition:all 0.4s ease-in-out;
@@ -63,29 +67,49 @@
     transform:scale(1.1);
 }
 .card_name{
-    margin-top: 15px;
+    position: relative;
     text-align: center;
 }
-.card_name h3{
-    margin-bottom: 10px;
-    font-size: 1.8rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.circle{
+   
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    color: #343434;
+    font-size: 26px;
+    font-family: "Playfair Display", serif;
+    font-style: italic;
+    background: #fff;
+    display: inline-block;
+    position: absolute;
+    left: 48%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    top: -35px;
+    line-height: 68px;
+    margin-bottom: 0px;
+    z-index: 2;
+    
+    
+
 }
-.card_name p{
+.card_name h3{
     font-size: 1.5rem;
     font-weight: 300;
-    color: var(--grey);
-    margin-bottom: 10px;
+    color:#ccc;
+    padding-top: 35px;
+    margin-bottom: 20px;
 }
 
 .card__button{
     border-radius: 5px;
     border: none;
-    width: 120px;
-    height: 20px;
-    color: var(--white);
-    background-color: var(--azulito);
+    width: 140px;
+    height: 30px;
+    color: #fff;
+    background-color: #94c9d9;
     
     cursor: pointer;
-    margin-bottom: 15px;
+    margin-bottom: 6px;
 }
